rust/cube/cubesqlplanner/cubesqlplanner/src/tests/integration/multi_stage/snapshots/cubesqlplanner__tests__integration__multi_stage__order_limit__limit.snap
---
source: cubesqlplanner/src/tests/integration/multi_stage/order_limit.rs
expression: result
---
orders__created_at_month | orders__amount_by_id
-------------------------+---------------------
2024-01-01 00:00:00      | 200.00              
2024-01-01 00:00:00      | 120.00              
2024-01-01 00:00:00      | 50.00               
2024-01-01 00:00:00      | 30.00               
2024-01-01 00:00:00      | 100.00
